--- a/Cloud-Storage-Client/src/main/resources/MainStage.fxml
+++ b/Cloud-Storage-Client/src/main/resources/MainStage.fxml
@@ -3,7 +3,7 @@
 <!--        8.0.171-->
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<VBox xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MainController">
+<VBox xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UserInterface.MainController">
    <children>
       <MenuBar>
         <menus>
@@ -24,13 +24,13 @@
           </Menu>
         </menus>
       </MenuBar>
-      <HBox VBox.vgrow="ALWAYS" spacing="5" >
+      <HBox fx:id="mainHBox" VBox.vgrow="ALWAYS" spacing="5" >
          <children>
             <VBox VBox.vgrow="ALWAYS" HBox.hgrow="ALWAYS" alignment="CENTER" >
                <children>
                    <HBox HBox.hgrow="ALWAYS">
-                   <Button text="Домой" onAction="#getRootServerDir"></Button>
-                   <Button text="Назад" onAction="#getServerDirStepBack"></Button>
+                       <Button fx:id="butRootServerDir" text="Домой" onAction="#getRootServerDir"/>
+                       <Button fx:id="butServerDirStepBack" text="Назад" onAction="#getServerDirStepBack"/>
                   <TextField fx:id="textCurrentDirServer" HBox.hgrow="ALWAYS" onAction="#selectionCurrentDirServer"/>
                   <TextField fx:id="textSearchServerFile" HBox.hgrow="ALWAYS" onAction="#searchServerFile"/>
                   <Button text="Поиск"></Button>
@@ -39,23 +39,12 @@
 
                </children>
             </VBox>
-             <VBox VBox.vgrow="ALWAYS" alignment="CENTER" spacing="5">
-                 <Button text="Скачать" minWidth="140"></Button>
-                 <Button text="Загрузить" minWidth="140"></Button>
-                 <Button text="Переименовать" minWidth="140"></Button>
-                 <Button text="Копировать" minWidth="140"></Button>
-                 <Button text="Вырезать" minWidth="140"></Button>
-                 <Button text="Вставить" minWidth="140"></Button>
-                 <Button text="Открыть" minWidth="140"></Button>
-                 <Button text="Архивировать" minWidth="140"></Button>
-                 <Button text="Разархиватор" minWidth="140"></Button>
-                 <Button text="Удалить" minWidth="140"></Button>
-             </VBox>
             <VBox VBox.vgrow="ALWAYS" HBox.hgrow="ALWAYS">
                <children>
                    <HBox HBox.hgrow="ALWAYS">
-                       <Button text="Домой"></Button>
-                       <Button text="Назад"></Button>
+                       <Button fx:id="butRootUserDir" text="Домой" onAction="#getRootUserDir"/>
+                       <Button fx:id="butUserDirStepBack" text="Назад" onAction="#getUserDirStepBack"/>
+                       <ChoiceBox fx:id="choiceRootUserDir"/>
                        <TextField fx:id="textCurrentDirUser" HBox.hgrow="ALWAYS" onAction="#selectionCurrentDirUser"/>
                        <TextField fx:id="textSearchUserFile" HBox.hgrow="ALWAYS" onAction="#searchUserFile"/>
                        <Button text="Поиск"></Button>
